--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -15,6 +15,11 @@
   <name>Webapp</name>
   <description>Webapp.</description>
 
+          <properties>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+    </properties>
+
   <build>
     <finalName>${project.artifactId}</finalName>
 
